<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColorGray"
    tools:context="com.example.sulim.dice.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageview_left"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/dice_2" />

        <ImageView
            android:id="@+id/imageview_right"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/dice_4" />

    </LinearLayout>

    <Button
        android:id="@+id/button_roll"
        style="@style/RoundedCornerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="74dp"
        android:background="@color/colorPrimary"
        android:ellipsize="end"
        android:text="@string/throw_button"
        android:textColor="@color/colorWhite"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textView_Dice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:gravity="center"
        android:text="@string/text_main"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text=""
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextBet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_roll"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/text_bet"
        android:inputType="number"
        android:textSize="20sp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/editTextRez"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextBet"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/lucky_num"
        android:inputType="number"
        android:textSize="20sp"
        android:visibility="visible" />
</RelativeLayout>
